Replacing all gray and red studio color styles within a8c-for-agencies stylesheets

--- a/client/a8c-for-agencies/sections/purchases/billing/billing-details/style.scss
+++ b/client/a8c-for-agencies/sections/purchases/billing/billing-details/style.scss
@@ -36,7 +36,7 @@
 	* {
 		font-weight: 400;
 		font-size: 0.875rem;
-		color: var(--studio-gray-70);
+		color: var(--color-accent-70);
 	}
 
 	@include break-xlarge() {
