--- a/client/a8c-for-agencies/style.scss
+++ b/client/a8c-for-agencies/style.scss
@@ -151,7 +151,7 @@
 	.button.is-borderless:hover,
 	.button.is-borderless {
 		background: none;
-		color: var(--studio-gray-80);
+		color: var(--color-accent-80);
 	}
 
 	.split-button .button {
