--- a/client/a8c-for-agencies/sections/marketplace/pressable-overview/plan-selection/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/pressable-overview/plan-selection/style.scss
@@ -35,7 +35,7 @@
 
 .pressable-overview-plan-selection__details-card:not(.is-aside) {
 	flex-grow: 1;
-	background: var(--studio-automattic-0);
+	background: var(--studio-white);
 }
 
 .pressable-overview-plan-selection__details-card.is-aside {
