--- a/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-header/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-header/style.scss
@@ -34,7 +34,7 @@
 						align-items: center;
 						font-size: rem(18px);
 						font-weight: 400;
-						color: var(--studio-gray-70);
+						color: var(--color-accent-70);
 						line-height: 26px;
 						width: fit-content;
 
@@ -81,7 +81,7 @@
 						align-items: center;
 						font-size: rem(13px);
 						font-weight: 400;
-						color: var(--studio-gray-70);
+						color: var(--color-accent-70);
 						line-height: 13px;
 						width: fit-content;
 						text-decoration: none;
