--- a/client/a8c-for-agencies/sections/sites/site-set-favorite/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-set-favorite/style.scss
@@ -4,12 +4,12 @@
 .site-set-favorite__favorite-icon {
 	position: absolute;
 	top: 6px;
-	color: var(--studio-gray-20) !important;
+	color: var(--color-accent-20);
 }
 
 .site-set-favorite__favorite-icon-active {
-	visibility: visible !important;
-	color: var(--color-primary) !important;
+	visibility: visible;
+	color: var(--color-primary);
 }
 
 button.button.site-set-favorite__view-favorite {
