--- a/client/hosting-overview/components/style.scss
+++ b/client/hosting-overview/components/style.scss
@@ -1,3 +1,5 @@
+@import "@wordpress/base-styles/breakpoints";
+
 .hosting-overview {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
@@ -28,6 +30,21 @@
 .hosting-overview__active-domains {
 	grid-column: 1 / 3;
 	grid-row: 2 / 3;
+}
+
+@media ( max-width: $break-xlarge ) {
+	.hosting-overview {
+		grid-template-columns: 1fr;
+		grid-template-rows: auto auto auto;
+		grid-row-gap: 16px;
+	}
+
+	.hosting-overview__plan,
+	.hosting-overview__quick-actions,
+	.hosting-overview__active-domains {
+		grid-column: 1 / 2;
+		grid-row: auto;
+	}
 }
 
 .hosting-overview__plan-card-header,
