--- a/client/a8c-for-agencies/sections/sites/site-favicon/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-favicon/style.scss
@@ -7,7 +7,7 @@
 		&.is-blank {
 			background: transparent;
 			.wpcom-favicon {
-				fill: var(--studio-blue-50);
+				fill: var(--color-primary-50);
 			}
 
 			.no-favicon {
