--- a/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-header/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-header/style.scss
@@ -23,7 +23,7 @@
 					font-weight: 500;
 					font-size: rem(32px);
 					line-height: 32px;
-					color: var(--studio-black);
+					color: var(--color-text-black);
 					margin-bottom: 4px;
 				}
 
@@ -70,7 +70,7 @@
 					font-weight: 500;
 					font-size: rem(16px);
 					line-height: 16px;
-					color: var(--studio-black);
+					color: var(--color-text-black);
 					margin-bottom: 4px;
 				}
 
