--- a/client/a8c-for-agencies/sections/sites/site-preview-pane/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-preview-pane/style.scss
@@ -97,7 +97,7 @@
 
 						&:hover {
 							color: #fff;
-							background-color: var(--studio-automattic-60);
+							background-color: var(--color-accent-60);
 						}
 					}
 				}
