--- a/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-content/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-content/style.scss
@@ -1,6 +1,6 @@
 .site-preview__content {
 	flex-grow: 1;
-	background-color: var(--studio-white);
+	background-color: var(--color-light-backdrop);
 	padding: 48px;
 	text-align: left;
 	overflow-y: auto;
