--- a/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@@ -357,7 +357,7 @@
 		font-size: rem(11px);
 		font-weight: 500;
 		line-height: 20px;
-		color: var(--studio-automattic-80);
+		color: var(--color-accent-80);
 	}
 
 	tr.dataviews-view-table__row th[data-field-id="favorite"] {
@@ -469,7 +469,7 @@
 			width: 400px;
 			flex: unset;
 			transition: all 0.2s;
-			background: var(--studio-white);
+			background: var(--color-light-backdrop);
 
 			.sites-overview__content {
 				margin-top: 24px;
@@ -499,7 +499,7 @@
 			flex-grow: 1;
 			width: auto;
 			transition: flex-grow 0.2s;
-			background: var(--studio-white);
+			background: var(--color-light-backdrop);
 			max-height: calc(100vh - 32px);
 			border-radius: 8px; /* stylelint-disable-line scales/radii */
 		}
@@ -596,7 +596,7 @@
 		align-items: center;
 		width: fit-content;
 		height: 22px;
-		background: var(--studio-white);
+		background: var(--color-light-backdrop);
 		box-sizing: border-box;
 		border-radius: 12px; /* stylelint-disable-line scales/radii */
 		font-weight: 500;
@@ -616,7 +616,7 @@
 		}
 		&:hover:not(.is-link) {
 			background: var(--color-accent-80);
-			color: var(--studio-white);
+			color: var(--color-light-backdrop);
 		}
 
 		&:visited:not(:hover) {
@@ -624,8 +624,8 @@
 		}
 
 		&.is-selected {
-			background: var(--studio-jetpack-green-50);
-			color: var(--studio-white);
+			background: var(--color-jetpack-50);
+			color: var(--color-light-backdrop);
 			border: none;
 		}
 
@@ -658,7 +658,7 @@
 		margin-inline-start: -5px;
 	}
 	.sites-overview__stats-trend__up {
-		fill: var(--studio-jetpack-green-40);
+		fill: var(--color-jetpack-40);
 	}
 	.sites-overview__stats-trend__down {
 		fill: var(--color-scary-50);
@@ -721,7 +721,7 @@
 
 		.wordpress-logo {
 			display: inline-block;
-			fill: var(--studio-blue-50);
+			fill: var(--color-primary-50);
 			visibility: hidden;
 			margin: auto 0;
 
@@ -742,7 +742,7 @@
 	.sites-overview__error-icon {
 		background: #d94f4f;
 		padding: 11px;
-		color: var(--studio-white);
+		color: var(--color-light-backdrop);
 		width: 5%;
 		display: flex;
 		align-items: center;
@@ -750,7 +750,7 @@
 	}
 	.sites-overview__error-message {
 		font-size: 0.75rem;
-		color: var(--studio-white);
+		color: var(--color-light-backdrop);
 		padding: 0.5em;
 		margin: auto 0;
 	}
@@ -768,7 +768,7 @@
 	}
 	.sites-overview__error-message-link {
 		font-size: 0.75rem;
-		color: var(--studio-white) !important;
+		color: var(--color-text-white) !important;
 		padding: 6px;
 		position: absolute;
 		inset-inline-end: 16px;
@@ -790,7 +790,7 @@
 	}
 
 	.sites-overview__stats {
-		color: var(--studio-black);
+		color: var(--color-text-black);
 		display: inline-block;
 		line-height: 17px;
 		height: 18px;
@@ -805,7 +805,7 @@
 		}
 		.popover__inner {
 			background: var(--color-accent-60);
-			color: var(--studio-white);
+			color: var(--color-text-white);
 			padding: 10px 12px;
 			border: none;
 		}
@@ -839,8 +839,8 @@
 		color: var(--color-text-inverted);
 	}
 	.sites-overview__status-warning {
-		background-color: var(--studio-yellow-20);
-		border-color: var(--studio-yellow-20);
+		background-color: var(--color-yellow-20);
+		border-color: var(--color-yellow-20);
 		color: var(--color-warning-80);
 	}
 	@keyframes highlight-tab-animation {
@@ -888,7 +888,7 @@
 		right: 0;
 		bottom: 0;
 		padding: 1rem;
-		background: var(--studio-white);
+		background: var(--color-light-backdrop);
 		box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.12);
 		z-index: 20;
 
@@ -955,11 +955,11 @@
 		user-select: none;
 
 		&.boost-score-good {
-			@include boost-score-style(var(--studio-green-50), var(--studio-green-0));
+			@include boost-score-style(var(--color-jetpack-50), var(--color-jetpack-0));
 		}
 
 		&.boost-score-okay {
-			@include boost-score-style(var(--studio-yellow-50), var(--studio-yellow-0));
+			@include boost-score-style(var(--color-yellow-50), var(--color-yellow-0));
 		}
 
 		&.boost-score-bad {
