--- a/client/layout/masterbar/oauth-client.scss
+++ b/client/layout/masterbar/oauth-client.scss
@@ -639,7 +639,7 @@
 .jetpack-cloud {
 	input:focus:hover[type],
 	input:focus[type] {
-		box-shadow: 0 0 0 2px var(--studio-jetpack-green-10);
+		box-shadow: 0 0 0 2px var(--color-primary-10);
 	}
 
 	.button:not(.social-buttons__button) {
