--- a/client/a8c-for-agencies/components/slider/style.scss
+++ b/client/a8c-for-agencies/components/slider/style.scss
@@ -31,11 +31,11 @@
 	@mixin slider-thumb-style {
 		-webkit-appearance: none;
 		appearance: none;
-		background-color: var(--studio-black);
+		background-color: var(--color-surface-backdrop);
 		height: 16px;
 		width: 16px;
 		border-radius: 50%;
-		border: 2.62px solid var(--studio-white);
+		border: 2.62px solid var(--color-border-light);
 		margin-block-start: -5px;
 		cursor: pointer;
 		z-index: 2;
