--- a/client/a8c-for-agencies/sections/marketplace/pressable-overview/plan-selection/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/pressable-overview/plan-selection/style.scss
@@ -35,7 +35,7 @@
 
 .pressable-overview-plan-selection__details-card:not(.is-aside) {
 	flex-grow: 1;
-	background: var(--studio-automattic-0);
+	background: var(--color-light-backdrop);
 }
 
 .pressable-overview-plan-selection__details-card.is-aside {
@@ -149,7 +149,7 @@
 }
 
 .components-button.pressable-overview-plan-selection__filter-button {
-	border: 1.5px solid var(--studio-black);
+	border: 1.5px solid var(--color-surface-backdrop);
 	font-size: 0.875rem;
 	font-weight: 600;
 	line-height: 1.1;
@@ -159,7 +159,7 @@
 	padding: 6px 12px;
 
 	&.is-selected {
-		background: var(--studio-black);
+		background: var(--color-surface-backdrop);
 		color: var(--color-text-inverted);
 	}
 
