--- a/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-footer/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-preview-pane/site-preview-pane-footer/style.scss
@@ -1,6 +1,6 @@
 .site-preview__footer {
 	height: 48px;
-	background-color: var(--studio-white);
+	background-color: var(--color-light-backdrop);
 	padding: 32px 48px;
-	border-top: 1px solid var(--studio-gray-0);
+	border-top: 1px solid var(--color-accent-0);
 }
