--- a/client/blocks/plugins-scheduled-updates/notification-settings.scss
+++ b/client/blocks/plugins-scheduled-updates/notification-settings.scss
@@ -7,18 +7,18 @@
 			font-size: $font-body-small;
 			font-weight: 500;
 			color: $studio-black;
-			margin-bottom: 8px;
+			margin-bottom: 0.5rem;
 		}
 
 		.components-text.info-msg {
 			font-size: $font-body-small;
 			color: $studio-gray-60;
 			line-height: 20px;
-			margin-bottom: 16px;
+			margin-bottom: 1rem;
 		}
 
 		.form-field {
-			margin-bottom: 16px;
+			margin-bottom: 1rem;
 		}
 	}
 }
