--- a/client/a8c-for-agencies/sections/sites/site-preview-pane/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-preview-pane/style.scss
@@ -17,7 +17,8 @@
 		}
 
 		.section-nav-tabs__list {
-			padding: 0 32px;
+			padding: 0 0 0 32px;
+			width: unset;
 		}
 
 		.section-nav-tab__text {
