--- a/client/hosting-overview/components/style.scss
+++ b/client/hosting-overview/components/style.scss
@@ -73,6 +73,12 @@ a.hosting-overview__link-button {
 	text-decoration-line: underline;
 }
 
+@media ( max-width: $break-xlarge ) {
+	.hosting-overview__mobile-hidden-link-button {
+		display: none;
+	}
+}
+
 .hosting-overview__card-header {
 	display: flex;
 	gap: var(--grid-unit-15, 12px);
@@ -130,6 +136,12 @@ a.hosting-overview__link-button {
 
 .hosting-overview__plan-storage-footer {
 	text-align: right;
+}
+
+@media ( max-width: $break-xlarge ) {
+	.hosting-overview__plan-storage-footer {
+		text-align: left;
+	}
 }
 
 .hosting-overview__actions-list {
