--- a/client/hosting-overview/components/style.scss
+++ b/client/hosting-overview/components/style.scss
@@ -1,15 +1,50 @@
-.hosting-overview__top-cards-wrapper {
-	display: flex;
-	gap: 33px;
-	margin-bottom: 38px;
+@import "@wordpress/base-styles/breakpoints";
+
+.hosting-overview {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: auto auto;
+	grid-column-gap: 33px;
+	grid-row-gap: 38px;
 }
 
 .hosting-overview__card {
 	border-radius: 4px;
 	border: 1px solid var(--studio-gray-5);
 	box-shadow: none;
-	flex: 1;
 	padding: 22px;
+	width: 100%;
+	height: 100%;
+}
+
+.hosting-overview__plan {
+	grid-column: 1 / 2;
+	grid-row: 1 / 2;
+}
+
+.hosting-overview__quick-actions {
+	grid-column: 2 / 3;
+	grid-row: 1 / 2;
+}
+
+.hosting-overview__active-domains {
+	grid-column: 1 / 3;
+	grid-row: 2 / 3;
+}
+
+@media ( max-width: $break-xlarge ) {
+	.hosting-overview {
+		grid-template-columns: minmax(300px, 1fr);
+		grid-template-rows: auto auto auto;
+		grid-row-gap: 16px;
+	}
+
+	.hosting-overview__plan,
+	.hosting-overview__quick-actions,
+	.hosting-overview__active-domains {
+		grid-column: 1 / 2;
+		grid-row: auto;
+	}
 }
 
 .hosting-overview__plan-card-header,
@@ -36,6 +71,12 @@ a.hosting-overview__link-button {
 	font-style: normal;
 	line-height: 16px;
 	text-decoration-line: underline;
+}
+
+@media ( max-width: $break-xlarge ) {
+	.hosting-overview__mobile-hidden-link-button {
+		display: none;
+	}
 }
 
 .hosting-overview__card-header {
@@ -95,6 +136,12 @@ a.hosting-overview__link-button {
 
 .hosting-overview__plan-storage-footer {
 	text-align: right;
+}
+
+@media ( max-width: $break-xlarge ) {
+	.hosting-overview__plan-storage-footer {
+		text-align: left;
+	}
 }
 
 .hosting-overview__actions-list {
