--- a/client/components/survey-container/components/style.scss
+++ b/client/components/survey-container/components/style.scss
@@ -89,6 +89,25 @@ $blueberry-hover-color: var(--wp-components-color-accent, var(--wp-admin-theme-c
 				}
 			}
 
+			input[type="checkbox"] {
+				height: 20px;
+				width: 20px;
+				min-width: 20px;
+				margin: 0;
+				border-color: $studio-gray-20;
+
+				&:checked {
+					border-color: $blueberry-color;
+				}
+
+				&:checked::before {
+					margin: 1px;
+					width: 16px;
+					height: 16px;
+					background-color: $blueberry-color;
+				}
+			}
+
 			.question-options__option-label {
 				label {
 					font-size: $font-body;
