A4A: Modifying SectionNav NavTabs component to consider navigation using horizontal scroll (#89618)

--- a/client/a8c-for-agencies/sections/sites/site-preview-pane/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-preview-pane/style.scss
@@ -17,7 +17,8 @@
 		}
 
 		.section-nav-tabs__list {
-			padding: 0 32px;
+			padding: 0 0 0 32px;
+			width: unset;
 		}
 
 		.section-nav-tab__text {
@@ -54,9 +55,15 @@
 
 		@media (min-width: 481px) {
 			.section-nav-group {
+				overflow-x: auto;
+
 				.is-dropdown {
 					width: 100%;
 				}
+			}
+
+			.section-nav-tabs {
+				width: unset;
 			}
 		}
 
