--- a/client/a8c-for-agencies/sections/sites/sites-dataviews/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dataviews/style.scss
@@ -263,3 +263,11 @@
 		display: none;
 	}
 }
+
+a.site-actions__menu-item {
+	&:hover,
+	&:focus {
+		background: var(--wp-components-color-accent);
+		color: var(--color-text-inverted);
+	}
+}
