--- a/client/a8c-for-agencies/components/foldable-nav/style.scss
+++ b/client/a8c-for-agencies/components/foldable-nav/style.scss
@@ -43,4 +43,16 @@
 		list-style: none;
 		margin: 0;
 	}
+
+	.sidebar-v2__menu-item {
+		&:hover,
+		&:focus {
+			background: var(--wp-components-color-accent);
+
+			.components-flex-item,
+			.sidebar__menu-icon {
+				color: var(--color-text-inverted);
+			}
+		}
+	}
 }
