--- a/client/a8c-for-agencies/components/sidebar/header/style.scss
+++ b/client/a8c-for-agencies/components/sidebar/header/style.scss
@@ -71,7 +71,7 @@ html.accessible-focus .a4a-sidebar__profile-dropdown-button:focus {
 
 	background: var(--color-surface);
 	border: 1px solid var(--color-accent-0);
-	border-radius: 2px;
+	border-radius: 4px;
 	box-shadow:
 		0 4px 6px rgba(var(--color-accent-100-rgb), 0.1),
 		0 1px 2px rgba(var(--color-accent-100-rgb), 0.1);
@@ -91,7 +91,13 @@ html.accessible-focus .a4a-sidebar__profile-dropdown-button:focus {
 
 	&:hover,
 	&:focus {
-		background: var(--color-sidebar-text-alternative);
+		background: var(--wp-components-color-accent);
+
+		a.button.is-borderless,
+		button.button.is-borderless {
+			color: var(--color-text-inverted);
+			fill: var(--color-text-inverted);
+		}
 	}
 
 	a,
