--- a/client/blocks/plugins-scheduled-updates/schedule-form.scss
+++ b/client/blocks/plugins-scheduled-updates/schedule-form.scss
@@ -129,6 +129,17 @@
 	.radio-option {
 		padding: 1.5rem;
 		flex-basis: 100%;
+		margin-bottom: 0.5rem !important;
+
+		.form-field--frequency-container {
+			flex-direction: column;
+			align-items: flex-start;
+
+			@include break-wide {
+				flex-direction: row;
+				align-items: center;
+			}
+		}
 
 		& > .components-radio-control {
 			margin-bottom: 1rem;
@@ -161,6 +172,7 @@
 			gap: 2rem;
 
 			& > .components-flex-item {
+				flex-basis: 100%;
 				margin-bottom: 0;
 				border: solid 1px var(--studio-gray-10);
 				border-radius: 2px;
