Stats: Updating visuals for the Devices module

--- a/client/my-sites/stats/stats-module-devices/stats-module-devices.scss
+++ b/client/my-sites/stats/stats-module-devices/stats-module-devices.scss
@@ -1,3 +1,4 @@
+@import "@wordpress/base-styles/breakpoints";
 @import "../modernized-mixins";
 
 .stats-module-devices {
@@ -72,5 +73,15 @@
 		// Prevent blur elements from being interactable.
 		pointer-events: none;
 		user-select: none;
+	}
+}
+
+.stats-module-devices__tabs {
+	.segmented-control__item {
+		min-width: 80px;
+
+		@media (max-width: $break-small ) {
+			min-width: auto;
+		}
 	}
 }
