--- a/client/blocks/plugins-scheduled-updates/schedule-form.scss
+++ b/client/blocks/plugins-scheduled-updates/schedule-form.scss
@@ -1,3 +1,6 @@
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
+
 .schedule-form {
 	& > div {
 		width: 100%;
@@ -16,6 +19,7 @@
 
 	.components-radio-control__input {
 		padding: 0;
+		margin-right: 1rem;
 		background: transparent;
 		border-color: var(--studio-gray-50);
 
@@ -48,6 +52,7 @@
 	}
 
 	.components-search-control {
+		max-width: 300px;
 		margin-bottom: 1.5rem;
 
 		.components-input-control__container {
@@ -63,8 +68,26 @@
 		margin: -3px;
 		padding: 3px;
 
+		display: flex;
+		flex-wrap: wrap;
+
 		> * {
-			margin-bottom: 0.875rem;
+			box-sizing: border-box;
+			margin-bottom: 0.5rem;
+
+			flex: 0 0 calc(100% - 2rem);
+			max-width: calc(100% - 2rem);
+			margin-right: 2rem;
+
+			@include break-large {
+				flex: 0 0 calc(50% - 2rem);
+				max-width: calc(50% - 2rem);
+			}
+
+			@include break-xlarge {
+				flex: 0 0 calc(33.33% - 2rem);
+				max-width: calc(33.33% - 2rem);
+			}
 
 			&:last-child:not(.components-spinner) {
 				margin-bottom: 0;
@@ -91,27 +114,41 @@
 			margin-bottom: 0;
 		}
 
-		& > label {
-			display: inline-block;
-			margin-bottom: 0.5rem;
-		}
-
 		label {
 			font-size: 0.875rem;
 			font-weight: 500;
+		}
+
+		& > label {
+			display: inline-block;
+			margin-bottom: 0.875rem;
+			font-size: 1.25rem;
 		}
 	}
 
 	.radio-option {
 		padding: 1.5rem;
+		flex-basis: 100%;
+		margin-bottom: 0.5rem !important;
+
+		.form-field--frequency-container {
+			flex-direction: column;
+			align-items: flex-start;
+
+			@include break-wide {
+				flex-direction: row;
+				align-items: center;
+			}
+		}
+
+		& > .components-radio-control {
+			margin-bottom: 1rem;
+		}
 
 		&.selected {
 			border: solid 1px var(--wp-admin-theme-color) !important;
 			border-radius: 2px;
 
-			& > .components-radio-control {
-				margin-bottom: 1rem;
-			}
 		}
 
 		&:not(.selected) {
@@ -124,10 +161,22 @@
 				border-color: var(--studio-gray-20);
 			}
 		}
+	}
 
-		&:last-of-type {
-			border-bottom: solid 1px var(--color-border-subtle);
-			margin-bottom: 1rem;
+	.form-field--frequency {
+		.components-base-control__field {
+			margin: 0;
+		}
+
+		& > .components-flex {
+			gap: 2rem;
+
+			& > .components-flex-item {
+				flex-basis: 100%;
+				margin-bottom: 0;
+				border: solid 1px var(--studio-gray-10);
+				border-radius: 2px;
+			}
 		}
 	}
 
