--- a/client/a8c-for-agencies/sections/referrals/common/step-section-item/style.scss
+++ b/client/a8c-for-agencies/sections/referrals/common/step-section-item/style.scss
@@ -45,3 +45,16 @@
 		}
 	}
 }
+
+.step-section-item__status {
+	margin-block-start: 8px;
+
+	&.badge--success {
+		background-color: var(--color-success-5);
+		color: var(--color-success-80);
+	}
+	&.badge--warning {
+		background-color: var(--color-warning-5);
+		color: var(--color-warning-80);
+	}
+}
