--- a/packages/plans-grid-next/src/components/plan-type-selector/style.scss
+++ b/packages/plans-grid-next/src/components/plan-type-selector/style.scss
@@ -4,6 +4,7 @@
 	width: fit-content;
 	min-width: 275px;
 	background-color: var(--studio-white);
+	z-index: 2;
 }
 
 .is-sticky-plan-type-selector {
