Plans: Fix term selector from being hidden in production (#89753)
* Plans: Fix term selector from being hidden in production

* Bump z-index

---------

Co-authored-by: niranjan-uma-shankar <niranjan.u@gmail.com>

--- a/packages/plans-grid-next/src/components/plan-type-selector/style.scss
+++ b/packages/plans-grid-next/src/components/plan-type-selector/style.scss
@@ -4,6 +4,7 @@
 	width: fit-content;
 	min-width: 275px;
 	background-color: var(--studio-white);
+	z-index: 2;
 }
 
 .is-sticky-plan-type-selector {
@@ -109,7 +110,6 @@
 		}
 
 		.components-flex {
-			overflow: hidden;
 			width: 100%;
 			.components-input-control__container {
 				.components-custom-select-control__button {
