--- a/client/a8c-for-agencies/components/items-dashboard/items-dataviews/style.scss
+++ b/client/a8c-for-agencies/components/items-dashboard/items-dataviews/style.scss
@@ -3,38 +3,6 @@
 
 .sites-overview__content {
 
-	.components-checkbox-control__input[type="checkbox"]:focus {
-		box-shadow: 0 0 0 var(--studio-jetpack-green-50) #fff, 0 0 0 calc(2* var(--studio-jetpack-green-50)) var(--studio-jetpack-green-50);
-		outline: 2px solid transparent;
-		outline-offset: 2px;
-	}
-	.components-checkbox-control__input[type="checkbox"]:checked,
-	.components-checkbox-control__input[type="checkbox"]:indeterminate {
-		background: var(--wp-components-color-accent, var(--studio-jetpack-green-50));
-		border-color: var(--wp-components-color-accent, var(--studio-jetpack-green-50));
-	}
-
-	.dataviews-bulk-edit-button.components-button.is-tertiary:active:not(:disabled),
-	.dataviews-bulk-edit-button.components-button.is-tertiary:hover:not(:disabled) {
-		box-shadow: none;
-		background-color: transparent;
-		color: var(--studio-jetpack-green-50);
-	}
-
-	.dataviews-view-table__actions-column {
-		display: none;
-	}
-
-	thead {
-		th.sites-dataviews__site {
-			background: var(--studio-white);
-			td {
-				padding: 16px 0;
-				border-bottom: 1px solid var(--color-neutral-5);
-			}
-		}
-	}
-
 	tr.dataviews-view-table__row {
 		background: var(--studio-white);
 
@@ -57,11 +25,6 @@
 
 		&:hover {
 			background: var(--color-neutral-0);
-
-			.site-set-favorite__favorite-icon,
-			.components-checkbox-control__input {
-				opacity: 1;
-			}
 		}
 
 		th {
@@ -76,15 +39,6 @@
 			padding: 16px 4px 16px 48px;
 			border-bottom: 1px solid var(--color-neutral-5);
 			vertical-align: middle;
-		}
-
-		td:has(.sites-dataviews__site) {
-			padding: 8px 16px 8px 4px;
-			width: 20%;
-		}
-
-		.site-sort__clickable {
-			cursor: pointer;
 		}
 
 		.dataviews-view-table__checkbox-column,
@@ -117,43 +71,6 @@
 	margin-bottom: 8px;
 }
 
-.sites-dataviews__site {
-	display: flex;
-	flex-direction: row;
-
-	.button {
-		padding: 0;
-	}
-}
-
-.sites-dataviews__site-name {
-	display: inline-block;
-	text-align: left;
-	text-overflow: ellipsis;
-	overflow: hidden;
-	white-space: nowrap;
-	width: 180px;
-	font-weight: 500;
-	font-size: rem(14px);
-}
-
-.sites-dataviews__site-url {
-	text-overflow: ellipsis;
-	overflow: hidden;
-	white-space: nowrap;
-	font-size: rem(12px);
-	color: var(--color-neutral-60);
-	font-weight: 400;
-}
-
-.preview-hidden {
-	@media (min-width: 2040px) {
-		.sites-dataviews__site-name {
-			width: 250px;
-		}
-	}
-}
-
 .sites-dataviews__actions {
 	display: flex;
 	flex-direction: row;
@@ -180,10 +97,9 @@
 	padding-bottom: 32px !important;
 }
 
-.main.a4a-layout.sites-dashboard:has(.dataviews-pagination) {
+.main.sites-dashboard.sites-dashboard__layout:has(.dataviews-pagination) {
 	height: calc(100vh - 70px) !important;
 }
-
 
 .dataviews-pagination {
 	background: #fff;
@@ -230,7 +146,6 @@
 		}
 	}
 }
-
 
 .dataviews-wrapper {
 	.dataviews-no-results,
