--- a/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@@ -33,6 +33,9 @@
 
 	.a4a-layout__top-wrapper:not(.preview-hidden) {
 		padding-block-start: 24px;
+		@include breakpoint-deprecated( "<660px" ) {
+			padding-block-start: 0;
+		}
 	}
 
 	@media (min-width: $break-large) {
@@ -96,7 +99,6 @@
 				}
 
 				.current-section button {
-					margin-top: 12px;
 					padding: 14px 8px;
 				}
 
