--- a/client/my-sites/sidebar/style.scss
+++ b/client/my-sites/sidebar/style.scss
@@ -537,6 +537,12 @@ $font-size: rem(14px);
 
 	/* stylelint-disable-next-line no-duplicate-selectors */
 	.is-unified-site-sidebar-visible {
+		.current-site__notices {
+			max-width: 220px;
+			margin-left: auto;
+			margin-right: auto;
+		}
+
 		.upsell-nudge.banner.card.is-compact {
 			margin-top: 0;
 			padding: 8px;
@@ -556,6 +562,7 @@ $font-size: rem(14px);
 
 			.banner__action {
 				width: 100%;
+				margin-top: 0;
 
 				button {
 					width: 100%;
@@ -690,6 +697,12 @@ $font-size: rem(14px);
 		.upsell-nudge.banner.card.is-compact {
 			margin: 8px 3px 7px;
 			padding: 2px 12px 2px 4px;
+		}
+
+		.is-unified-site-sidebar-visible {
+			.upsell-nudge.banner.card.is-compact {
+				margin-top: 0;
+			}
 		}
 
 		.current-site__notices > .banner {
