--- a/client/a8c-for-agencies/sections/referrals/common/step-section-item/style.scss
+++ b/client/a8c-for-agencies/sections/referrals/common/step-section-item/style.scss
@@ -53,8 +53,14 @@
 		background-color: var(--color-success-5);
 		color: var(--color-success-80);
 	}
+
 	&.badge--warning {
 		background-color: var(--color-warning-5);
 		color: var(--color-warning-80);
+	}
+
+	&.badge--error {
+		background-color: var(--color-error-5);
+		color: var(--color-error-80);
 	}
 }
