--- a/packages/plans-grid-next/src/style.scss
+++ b/packages/plans-grid-next/src/style.scss
@@ -131,6 +131,10 @@ $mobile-card-max-width: 440px;
 	}
 }
 
+.plans-grid-next-features-grid__feature-group-title {
+	font-weight: 600;
+}
+
 .plan-features-2023-grid__mobile-view {
 	display: flex;
 	flex-direction: column;
