Scheduled updates: Create paths selector form control (#89763)
* Create select health check paths form control

* Fix input focus style issue

* Integrate the first version of path validation

* Implement remove path action

* Turn off autocomplete for the new path field

* Add 'Step #' label before the each form control

* Add 'Step #' label before the each form control

--- a/client/blocks/plugins-scheduled-updates/schedule-form.scss
+++ b/client/blocks/plugins-scheduled-updates/schedule-form.scss
@@ -189,4 +189,33 @@
 			}
 		}
 	}
+
+	.form-field--paths {
+		.paths {
+			.components-input-control__backdrop {
+				border-color: var(--studio-gray-0);
+			}
+		}
+
+		.new-path {
+			.components-input-control__backdrop {
+				border-color: var(--studio-gray-10);
+			}
+
+			.components-input-base[class*="Root-rootFocusedStyles"] {
+				.components-input-control__backdrop {
+					border-color: var(--wp-components-color-accent, var(--wp-admin-theme-color, #007cba));
+				}
+			}
+		}
+
+		.path {
+			margin-bottom: 0.75rem;
+		}
+
+		input[readonly] {
+			color: var(--studio-gray-50);
+			background: var(--studio-gray-0);
+		}
+	}
 }
