wip: customize connect page for wooblaze

--- a/client/blocks/login/style.scss
+++ b/client/blocks/login/style.scss
@@ -6,7 +6,7 @@
 
 $breakpoint-mobile: 782px; //Mobile size.
 
-.layout:not(.is-jetpack-woocommerce-flow):not(.is-jetpack-woo-dna-flow):not(.is-wccom-oauth-flow):not(.is-woocommerce-core-profiler-flow) {
+.layout:not(.is-jetpack-woocommerce-flow):not(.is-jetpack-woo-dna-flow):not(.is-wccom-oauth-flow):not(.is-woocommerce-core-profiler-flow) { //:not(.is-jetpack-woo-blaze-flow)
 	.login.is-jetpack:not(.is-automattic-for-agencies-flow) {
 		.button.is-primary {
 			background-color: var(--studio-jetpack-green-50);
@@ -58,6 +58,7 @@ $breakpoint-mobile: 782px; //Mobile size.
 
 .layout.is-jetpack-woocommerce-flow,
 .layout.is-jetpack-woo-dna-flow,
+// .layout.is-jetpack-woo-blaze-flow,
 .layout.is-wccom-oauth-flow {
 	.login__jetpack-logo,
 	.login__woocommerce-logo {
