--- a/client/login/wp-login/style.scss
+++ b/client/login/wp-login/style.scss
@@ -164,6 +164,10 @@ $image-height: 47px;
 	@include woocommerce-colors();
 }
 
+.layout.is-jetpack-woo-blaze-flow {
+	@include woocommerce-colors();
+}
+
 .layout.is-jetpack-login:not(.is-woocommerce-core-profiler-flow) {
 
 	.login__form input:focus,
