--- a/client/jetpack-connect/style.scss
+++ b/client/jetpack-connect/style.scss
@@ -4,12 +4,16 @@
 $colophon-height: 50px; // wpcomColophon element at the bottom
 
 .jetpack-connect__main:not(.is-woocommerce):not(.is-wpcom-migration):not(.is-automattic-for-agencies-flow),
-.layout.is-section-jetpack-connect:not(.is-jetpack-mobile-flow):not(.is-jetpack-woocommerce-flow):not(.is-jetpack-woo-dna-flow):not(.is-wpcom-migration):not(.is-woocommerce-core-profiler-flow):not(.is-automattic-for-agencies-flow) {
+.layout.is-section-jetpack-connect:not(.is-jetpack-mobile-flow):not(.is-jetpack-woocommerce-flow):not(.is-jetpack-woo-dna-flow):not(.is-wpcom-migration):not(.is-woocommerce-core-profiler-flow):not(.is-automattic-for-agencies-flow):not(.is-jetpack-woo-blaze-flow) {
 	@include jetpack-connect-colors();
 }
 
 .layout.is-jetpack-woocommerce-flow,
 .layout.is-jetpack-woo-dna-flow {
+	@include woocommerce-colors();
+}
+
+.layout.is-jetpack-woo-blaze-flow {
 	@include woocommerce-colors();
 }
 
@@ -856,6 +860,235 @@ $colophon-height: 50px; // wpcomColophon element at the bottom
 		position: relative;
 	}
 
+	/** WooBlaze Onboarding Styles **/
+	&.is-jetpack-woo-blaze-flow {
+		background-color: var(--color-woocommerce-onboarding-background);
+
+		.jetpack-connect__main-logo {
+			text-align: center;
+			border-bottom: 1px solid var(--color-neutral-50);
+			position: absolute;
+			width: 100%;
+			left: 0;
+			top: 0;
+			height: 56px;
+
+			svg > g {
+				transform: translateX(25%);
+			}
+
+			@include breakpoint-deprecated( "<660px" ) {
+				margin-top: 0;
+			}
+		}
+
+		.jetpack-header {
+			margin: 0;
+			text-align: center;
+			margin-right: auto;
+			margin-left: auto;
+			padding-left: 0;
+			display: block;
+			height: 56px;
+			border-bottom: 1px solid var(--color-woocommerce-header-border);
+			background: var(--color-surface);
+
+			svg {
+				margin-top: 15px;
+			}
+		}
+
+		.formatted-header__subtitle {
+			color: var(--color-primary-10);
+			margin-top: 1em;
+			font-size: $font-body;
+			line-height: 24px;
+			font-weight: 400;
+		}
+
+		.jetpack-connect__authorize-form {
+			margin-top: 32px;
+		}
+
+		.jetpack-logo__icon-circle {
+			fill: var(--color-neutral-80);
+		}
+
+		.jetpack-logo__icon-triangle {
+			fill: var(--color-neutral-0);
+		}
+
+		.formatted-header__title {
+			color: var(--color-neutral-80);
+		}
+
+		.signup-form__submit {
+			border: 0;
+			box-shadow: none;
+		}
+
+		.jetpack-header__partner-logo-plus svg {
+			stroke: var(--color-neutral-80);
+		}
+
+		.jetpack-header__partner-logo-plus .gridicon {
+			color: var(--color-neutral-80);
+		}
+
+		.jetpack-connect__main,
+		.jetpack-connect__site.card,
+		.logged-out-form,
+		.jetpack-connect__logged-in-card.card {
+			max-width: 476px;
+		}
+
+		.jetpack-connect__main {
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+		.logged-out-form input:focus {
+			border: 0;
+			box-shadow: none;
+		}
+
+		.signup-form__terms-of-service-link,
+		.signup-form__terms-of-service-link a {
+			text-align: left;
+			color: var(--color-neutral-60);
+		}
+
+		.signup-form__terms-of-service-link a {
+			text-decoration: underline;
+		}
+
+		.logged-out-form__links {
+			max-width: 400px;
+		}
+
+		.logged-out-form__link-item {
+			text-align: center;
+			text-decoration: underline;
+			color: var(--color-neutral-60);
+			font-size: $font-body-small;
+		}
+
+		.auth-form__social,
+		.login__form-social {
+			.social-buttons__button {
+				border-color: var(--studio-pink-50);
+				color: var(--studio-pink-50);
+
+				&.disabled {
+					border-color: var(--studio-gray-30);
+					color: var(--studio-gray-30);
+				}
+			}
+		}
+
+		.logged-out-form__footer,
+		.login__form-footer {
+			text-align: center;
+
+			.button {
+				max-width: 310px;
+				margin-right: auto;
+				margin-left: auto;
+				height: 48px;
+			}
+		}
+
+		.login__form-footer {
+			margin-top: 24px;
+		}
+
+		.login__form {
+			padding-top: 14px;
+			border-radius: 2px;
+			@include elevation( 2dp );
+		}
+
+		.login__form-change-username {
+			display: none;
+		}
+
+		.jetpack-connect__logged-in-card button {
+			border: 0;
+			box-shadow: none;
+		}
+
+		.jetpack-connect__notices-container {
+			margin-top: 20px;
+		}
+
+		.jetpack-connect__action-disclaimer {
+			padding-top: 0;
+
+			.jetpack-connect__tos-link,
+			.jetpack-connect__tos-link a {
+				color: var(--color-neutral-60);
+				font-size: $font-body-extra-small;
+			}
+		}
+
+		.signup-form__woocommerce .card {
+			padding-bottom: 0;
+			padding-top: 8px;
+		}
+
+		.form-input-validation {
+			padding-bottom: 0;
+			padding-top: 0;
+		}
+
+		.woocommerce-muriel-text-control,
+		.muriel-input-text {
+			border-color: var(--color-neutral-20);
+
+			.components-base-control__label,
+			.text-control__label {
+				color: var(--color-neutral-50);
+			}
+
+			&.active {
+				box-shadow: 0 0 0 2px var(--studio-woocommerce-purple-60);
+				border-color: transparent;
+			}
+		}
+
+		.jetpack-connect__magic-link-card {
+			text-align: center;
+			border-radius: 2px;
+			@include elevation( 1dp );
+			padding: 32px;
+
+			p {
+				font-size: $font-body;
+				line-height: 24px;
+				color: var(--color-neutral-60);
+				margin-bottom: 0;
+			}
+
+			img {
+				margin: 24px;
+			}
+
+			.jetpack-connect__magic-link-resend {
+				font-size: $font-body-small;
+
+				button {
+					cursor: pointer;
+					text-decoration: underline;
+					color: var(--color-neutral-60);
+				}
+			}
+		}
+	}
+
+	&.is-jetpack-woo-blaze-flow .login__form-header-wrapper {
+		display: none;
+	}
+
 	/** WooCommerce Onboarding Styles **/
 	&.is-jetpack-woocommerce-flow,
 	&.is-jetpack-woo-dna-flow {
@@ -1342,7 +1575,8 @@ body.is-section-jetpack-connect {
 	background-color: var(--color-surface);
 	.layout {
 		&.is-jetpack-woocommerce-flow,
-		&.is-jetpack-woo-dna-flow {
+		&.is-jetpack-woo-dna-flow,
+		&.is-jetpack-woo-blaze-flow {
 			.wpcom-site__logo {
 				display: none;
 			}
