A4A: Decoupling potential A4A/JP cloud related styles from main styles related to the Preview Pane (#89704)
* Decoupling potential A4A/JP cloud related styles from main styles related to the preview pane

* Add the favicon back to the main header stylesheet

* Regrouping all the A4A styles in the same file in the main component

---------

Co-authored-by: cleacos <javacodia@gmail.com>

--- a/client/a8c-for-agencies/sections/sites/site-preview-pane/style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-preview-pane/style.scss
@@ -17,8 +17,7 @@
 		}
 
 		.section-nav-tabs__list {
-			padding: 0 0 0 32px;
-			width: unset;
+			padding: 0 32px;
 		}
 
 		.section-nav-tab__text {
@@ -61,9 +60,6 @@
 				}
 			}
 
-			.section-nav-tabs {
-				width: unset;
-			}
 		}
 
 		@media (max-width: 480px) {
