Some site to item classname changes, along with removing now unused files

--- a/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-content/style.scss
+++ b/client/a8c-for-agencies/components/items-dashboard/item-preview-pane/item-preview-pane-content/style.scss
@@ -1,4 +1,4 @@
-.site-preview__content {
+.item-preview__content {
 	flex-grow: 1;
 	background-color: var(--color-light-backdrop);
 	padding: 48px;
