visual styling for the component

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/site-migration-instructions-i2/pending-actions/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/site-migration-instructions-i2/pending-actions/style.scss
@@ -5,4 +5,12 @@
 	.visual-state-indicator:not(:has(.components-spinner)) {
 		margin: 5px 11px -3px;
 	}
+	.fade-in {
+		opacity: 0;
+		transition: opacity 0.3s ease-in-out;
+	}
+
+	.fade-in.active {
+		opacity: 1;
+	}
 }
