--- a/client/landing/stepper/declarative-flow/internals/steps-repository/site-migration-instructions-i2/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/site-migration-instructions-i2/style.scss
@@ -60,4 +60,13 @@
 			gap: 1rem;
 		}
 	}
+
+	.fade-in {
+		opacity: 0;
+		transition: opacity 0.3s ease-in-out;
+	}
+
+	.fade-in.active {
+		opacity: 1;
+	}
 }
