--- a/client/jetpack-connect/style.scss
+++ b/client/jetpack-connect/style.scss
@@ -3,7 +3,7 @@
 
 $colophon-height: 50px; // wpcomColophon element at the bottom
 
-.jetpack-connect__main:not(.is-woocommerce):not(.is-wpcom-migration):not(.is-automattic-for-agencies-flow),
+.jetpack-connect__main:not(.is-woocommerce):not(.is-wpcom-migration):not(.is-automattic-for-agencies-flow):not(.is-jetpack-woo-blaze-flow),
 .layout.is-section-jetpack-connect:not(.is-jetpack-mobile-flow):not(.is-jetpack-woocommerce-flow):not(.is-jetpack-woo-dna-flow):not(.is-wpcom-migration):not(.is-woocommerce-core-profiler-flow):not(.is-automattic-for-agencies-flow):not(.is-jetpack-woo-blaze-flow) {
 	@include jetpack-connect-colors();
 }
@@ -14,7 +14,7 @@ $colophon-height: 50px; // wpcomColophon element at the bottom
 }
 
 .layout.is-jetpack-woo-blaze-flow {
-	@include woocommerce-colors();
+	@include woo-blaze-colors();
 }
 
 .is-automattic-for-agencies-flow,
@@ -873,10 +873,6 @@ $colophon-height: 50px; // wpcomColophon element at the bottom
 			top: 0;
 			height: 56px;
 
-			svg > g {
-				transform: translateX(25%);
-			}
-
 			@include breakpoint-deprecated( "<660px" ) {
 				margin-top: 0;
 			}
@@ -894,7 +890,8 @@ $colophon-height: 50px; // wpcomColophon element at the bottom
 			background: var(--color-surface);
 
 			svg {
-				margin-top: 15px;
+				margin-top: 6px;
+				transform: translateX(25%);
 			}
 		}
 
