A4A: Extract and refactor SitePreviewPane decoupling code and moving it to ItemPreviewPane (#89842)
* Move and update the SiteFavIcon component to item-preview-pane context

* Update the ItemPreviewPaneHeader to use the modified SiteFavIcon component

* Update the ItemData interface, adding blogId and isDotcomSite info

This is a bit coupled but a necessary hack for now

* Update the common ItemPreviewPane style

* Update the Overview Preview Pane to use ItemPreviewPane and a4a-style.scss

* Update the Jetpack Preview Pane to use ItemPreviewPane and a4a-style.scss

* Update Jetpack features Preview Panes to use the Item* ones

* Update the specific a4a-style.scss with .item-preview__pane for the SitePreviewPane A4A context

* Update the SiteDataField (at A4A SitesDataViews context) to use the new SiteFavIcon props

* Removing parent div preview-pane__content as it is unnecessary and resulting in scroll issues

* Removing additional div wrapping the site-favicon - was unnecessary and causing padding issues

* Some site to item classname changes, along with removing now unused files

* Ensure the guided tour is not an expected part of ItemPreviewPane - add optional props instead

* Fixing property name typo, fixes failing unit test

* Further type tweaks to fix incorrect types

* Extract non common styles from ItemPreviewPaneContent

* Update the ItemPreviewPaneContent wrapper

* Unwrap the ItemPreviewPaneContent from the jetpack features tab components

* Remove unsued types.ts file from SitePreviewPane

* Remove the old style.scss from sites-preview-pane

* Update the Dotcom SitePreviewPane style

* Restore the types.ts file from the SitePreviewPane

* Update DotcomPreviewPane to allow icon

---------

Co-authored-by: Karen Attfield <karenlattfield@gmail.com>

--- a/client/a8c-for-agencies/sections/sites/site-preview-pane/a4a-style.scss
+++ b/client/a8c-for-agencies/sections/sites/site-preview-pane/a4a-style.scss
@@ -1,4 +1,4 @@
-.site-preview__pane {
+.item-preview__pane {
 
 	.preview-pane__navigation {
 
@@ -19,7 +19,7 @@
 	}
 }
 
-.site-preview__content {
+.item-preview__content {
 
 	.expanded-card {
 		text-align: left;
